<resources>
    <string name="app_name">didafavor</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">打开</string>
    <string name="drawer_close">close</string>
    <string name="iem_icon">to show item icon</string>
    <string name="person_email">591870@qq.com</string>
    <string name="movie">movie</string>
    <string name="music">music</string>
    <string name="news">news</string>
    <string name="category_movie">movie</string>
    <string name="movie_detail">movie detail</string>
    <string name="movie_title">MovieGuide</string>
    <string name="movie_details">MovieDetails</string>
    <string name="summary">summary</string>
    <string name="loading_movies">loading movie</string>
    <string name="movie_menu_sort">sort movie</string>
    <string name="most_popular">most popular</string>
    <string name="highest_rated">hightest rated</string>
    <string name="favorites">favorites</string>
    <string name="sort_by">Sort by</string>
    <string name="tv_movie_summary_label">Summary</string>
    <string name="tv_movie_trailers_label">Trailers</string>
    <string name="tv_movie_reviews_label">Reviews</string>
    <string name="release_date">Release Date: %s</string>
    <string name="movie_rate">Rate: %d/10</string>
</resources>
